# park_mail_c_1_sem

./: .travis.yml  README.md
iz_1/: CMakeLists.txt  main.c  travis.yml
iz_1/Errors/: error_codes.h  error_message.c  error_message.h
iz_1/ExchangeOfCurrency/: ArrayOfCurrencies.c  ArrayOfCurrencies.h  ArrayOfOffers.c  ArrayOfOffers.h  Currency.h  CurrencyExchangeRates.c  CurrencyExchangeRates.h  CurrencyPair.c  CurrencyPair.h  Offer.c  Offer.h
iz_1/Exchange_of_currency/: array_of_currencies.c  array_of_currencies.h  array_of_offers.c  array_of_offers.h  constants.h  currency.h  currency_exchange_rates.c  currency_exchange_rates.h  currency_pair.c  currency_pair.h  offer.c  offer.h
iz_1/TaskManager/: task_manager.h
iz_1/Task_manager/: task_manager.c  task_manager.h
iz_1/Tests/: test.cpp  unit_tests.cpp
iz_2/: CMakeLists.txt  data  data10  data10000  main.c
iz_2/Errors/: error_codes.h  error_message.c  error_message.h
iz_2/Recommendation_system/: constants.h  data.c  data.h  data_struct.h  int_array.c  int_array.h  lineal.c  lineal.h  object.h  object_name.h  objects_rating.c  objects_rating.h  parallel.c  parallel.h  thread_data.h  user_mark.h
iz_2/Task_flags/: task_flags.h
iz_2/Task_manager/: task_manager.c  task_manager.h
iz_2/Tests/: unit_tests.cpp
